; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/http2/extr_........libhttp2hpack.c_encode_scheme.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/http2/extr_........libhttp2hpack.c_encode_scheme.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@H2O_URL_SCHEME_HTTPS = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@H2O_URL_SCHEME_HTTP = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@H2O_TOKEN_SCHEME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, %struct.TYPE_5__*)* @encode_scheme to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @encode_scheme(i32* %0, i32* %1, %struct.TYPE_5__* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %7, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %9 = icmp eq %struct.TYPE_5__* %8, @H2O_URL_SCHEME_HTTPS
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load i32*, i32** %6, align 8
  %12 = getelementptr inbounds i32, i32* %11, i32 1
  store i32* %12, i32** %6, align 8
  store i32 135, i32* %11, align 4
  %13 = load i32*, i32** %6, align 8
  store i32* %13, i32** %4, align 8
  br label %28

14:                                               ; preds = %3
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %16 = icmp eq %struct.TYPE_5__* %15, @H2O_URL_SCHEME_HTTP
  br i1 %16, label %17, label %21

17:                                               ; preds = %14
  %18 = load i32*, i32** %6, align 8
  %19 = getelementptr inbounds i32, i32* %18, i32 1
  store i32* %19, i32** %6, align 8
  store i32 134, i32* %18, align 4
  %20 = load i32*, i32** %6, align 8
  store i32* %20, i32** %4, align 8
  br label %28

21:                                               ; preds = %14
  %22 = load i32*, i32** %5, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* @H2O_TOKEN_SCHEME, align 4
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = call i32* @encode_header_token(i32* %22, i32* %23, i32 %24, i32* %26)
  store i32* %27, i32** %4, align 8
  br label %28

28:                                               ; preds = %21, %17, %10
  %29 = load i32*, i32** %4, align 8
  ret i32* %29
}

declare dso_local i32* @encode_header_token(i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
